k8s/services/order-service/homol/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-homol
  labels:
    app: order-service-homol
    environment: homol
spec:
  type: ClusterIP
  selector:
    app: order-service-homol
  ports:
    - name: http
      port: 8080
      targetPort: http
