k8s/services/order-service/homol/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-homol
  labels:
    app: order-service-homol
    environment: homol
spec:
  ingressClassName: nginx
  rules:
    - host: homol.devops.local
      http:
        paths:
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-service-homol
                port:
                  number: 8080
